kubernetes/apps/website/website-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: website
  labels:
    app: website
spec:
  selector:
    app: website
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
